--- a/AlgoLoan/Content/Site.css
+++ b/AlgoLoan/Content/Site.css
@@ -1,7 +1,7 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
-}
+﻿/* body { */
+/*     padding-top: 0px; */
+/*     padding-bottom: 0px; */
+/* } */
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
@@ -21,4 +21,8 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+nav.navbar.navbar-expand-lg.navbar-light {
+    padding: 1em 3em !important;
 }
