Implemented subscription repository

--- a/AlgoLoan/Views/Home/Providers.cshtml
+++ b/AlgoLoan/Views/Home/Providers.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model List<AlgoLoan.Models.ViewModels.ProviderViewModel>
 @{
     ViewBag.Title = "Providers";
 }
@@ -26,7 +26,7 @@
                     {
                         <tr>
                             <th scope="row">@(i + 1)</th>
-                            <td>@Model[i].Name</td>
+                            <td>@Model[i].name</td>
                             <td>NGN@(Model[i].Amount)</td>
                             <td>
                                 <a class="btn btn-success" href="@Url.Action("Details", "Provider", new {id = @i})">See more details</a>
