--- a/AlgoLoan/Views/Shared/_Layout.cshtml
+++ b/AlgoLoan/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", new { area = "" } ,new { @class = "nav-link" })</li>
+                    <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li class="nav-item">@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li class="nav-item">@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     @Html.Partial("_LoginPartial")
@@ -32,7 +32,7 @@
 
         </nav>
     </header>
-        @RenderBody()
+    @RenderBody()
     <footer>
         <div class="container">
             <div class="copyright">
@@ -44,7 +44,7 @@
     </footer>
 
     @Scripts.Render("~/bundles/jquery")
+    @RenderSection("Scripts", false)
     @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
 </body>
 </html>
